# discovery_day_aug_2025

./: .gitignore  NOTES.md  PascalsTriangle.ipynb  README.md  beam.ipynb  main.py  pyproject.toml
